[gd_scene load_steps=4 format=3 uid="uid://ckykbn1u36w4v"]

[ext_resource type="Script" path="res://Scripts/UI/AssemblyMenu.gd" id="1_vrq1h"]
[ext_resource type="Script" path="res://Scripts/UI/DisplayRobotAssembly.gd" id="2_314t5"]
[ext_resource type="Script" path="res://Scripts/UI/DisplayInventory.gd" id="3_087re"]

[node name="AssemblyMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vrq1h")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -10
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.545098)

[node name="HSplitContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ScrollContainer2" type="ScrollContainer" parent="HSplitContainer"]
custom_minimum_size = Vector2(400, 200)
layout_mode = 2
size_flags_vertical = 4
horizontal_scroll_mode = 0
vertical_scroll_mode = 0

[node name="RobotA" type="VBoxContainer" parent="HSplitContainer/ScrollContainer2"]
visible = false
layout_mode = 2
script = ExtResource("2_314t5")

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/ScrollContainer2/RobotA"]
layout_mode = 2

[node name="MassLabel" type="Label" parent="HSplitContainer/ScrollContainer2/RobotA/HBoxContainer"]
layout_mode = 2
text = "Mass : 240 kg"

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer"]
custom_minimum_size = Vector2(342, 600)
layout_mode = 2
size_flags_vertical = 4
horizontal_scroll_mode = 0

[node name="Inventory" type="VBoxContainer" parent="HSplitContainer/ScrollContainer"]
custom_minimum_size = Vector2(400, 600)
layout_mode = 2
alignment = 1
script = ExtResource("3_087re")

[node name="ScrollContainer3" type="ScrollContainer" parent="HSplitContainer"]
custom_minimum_size = Vector2(400, 200)
layout_mode = 2
size_flags_vertical = 4
horizontal_scroll_mode = 0
vertical_scroll_mode = 0

[node name="RobotB" type="VBoxContainer" parent="HSplitContainer/ScrollContainer3"]
visible = false
layout_mode = 2
script = ExtResource("2_314t5")

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/ScrollContainer3/RobotB"]
layout_mode = 2

[node name="MassLabel" type="Label" parent="HSplitContainer/ScrollContainer3/RobotB/HBoxContainer"]
layout_mode = 2
text = "Mass : 240 kg"

[connection signal="gui_input" from="HSplitContainer/ScrollContainer/Inventory" to="HSplitContainer/ScrollContainer/Inventory" method="_on_gui_input"]
